# TACHYON

./: .clang-tidy  .clangd  .dockerignore  .gitattributes  .gitignore  AGENTS.md  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakeLists_modular_test.txt  CMakePresets.json  CONTRIBUTING.md  DESIGN.md  DISABLED_TESTS.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  MVP_V1.md  NIGHT_AGENTS.md  Optimization.md  PORTING_OPERATIONS_MAP.md  README.md  Rules.md  TACHYON_ENGINEERING_MANIFESTO.md  TACHYON_ENGINEERING_RULES.md  agent1_report.txt  bg_demo_job.json  bg_demo_scene.json  build.cmd  build.ps1  build.sh  build_debug.txt  build_error.txt  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_6.txt  build_log_7.txt  (+43 more)
examples/: CMakeLists.txt  galaxy_render.cpp  grid.cpp  remotion_style.cpp
examples/authoring/: 3d_showcase.cpp  modern_scene.cpp  png_tilt_3d.cpp
examples/library_demo/: CMakeLists.txt  main.cpp
examples/media_test/: CMakeLists.txt  main.cpp
examples/python/: tachyon.py
operations/: CMakeLists.txt  ENGINE_MAP.md
operations/assets/: CMakeLists.txt
operations/audio/: CMakeLists.txt
operations/compression/: CMakeLists.txt
operations/decoding/: CMakeLists.txt
operations/media/: CMakeLists.txt
operations/src/: audio_baker.cpp  audio_filter_builder.cpp  clip_processor.cpp  overlay_merger.cpp  path_resolver.cpp  transition_filters.cpp
operations/transitions/: CMakeLists.txt
src/: CMakeLists.txt  background_generator.cpp  camera_cut_contract.cpp  cli.cpp  gallery_gen.cpp  main.cpp  render_job.cpp  scene_spec.cpp  tachyon.cpp
src/ai/: roto_brush.cpp  segmentation_provider.cpp
src/audio/: README.md  audio_analyzer.cpp  audio_decoder.cpp  audio_encoder.cpp  audio_export.cpp  audio_graph.cpp  audio_mixer.cpp  audio_processor.cpp  audio_resampler.cpp  audio_waveform.cpp  hot_kernels.cpp  loudness_meter.cpp  sound_effect_registry.cpp
src/backends/: CMakeLists.txt
src/catalog/: CMakeLists.txt  background_catalog.cpp  background_registry.cpp  transition_catalog.cpp
src/cli/: CMakeLists.txt  cli.cpp  cli_app.cpp  cli_app.h  cli_concat.cpp  cli_doctor.cpp  cli_fetch_fonts.cpp  cli_inspect.cpp  cli_internal.h  cli_metrics.cpp  cli_motion_map.cpp  cli_output_presets.cpp  cli_preview_frame.cpp  cli_probe.cpp  cli_render.cpp  cli_thumb.cpp  cli_utils.cpp  cli_validate.cpp  cli_version.cpp  cli_watch.cpp  command.h  command_manifest.cpp  command_registry.cpp  command_registry.h  options.cpp
src/color/: CMakeLists.txt  README.md  aces.cpp  blend_kernel.cpp  blend_kernel_avx2.cpp  blending.cpp  color_math.cpp  color_space.cpp  premultiplied_alpha.cpp  tone_mapping.cpp  transfer_functions.cpp
src/composite/: matte_resolver.cpp
src/content/: CMakeLists.txt  preset_catalog.cpp
src/core/: CMakeLists.txt  README.md  animation_primitives.cpp  c_api.cpp  cli.cpp  cli_bridge.cpp  dummy.cpp  options.cpp  render_telemetry.cpp  report.cpp  telemetry_writer.cpp  transition_registry.cpp
src/debug/: crash_handler.cpp  debug_export.cpp
src/diagnostics/: CMakeLists.txt  trace.cpp  trace_backend_json.cpp  trace_backend_noop.cpp  trace_backend_perfetto.cpp  trace_session.cpp
src/hal/: hal.cpp
src/importer/: alembic_importer.cpp  usd_importer.cpp
src/media/: asset_manager.cpp  asset_resolution.cpp  extruder.cpp  image_manager.cpp  media_manager.cpp  media_prefetcher.cpp  mesh_loader.cpp  probe_cache.cpp  video_concat.cpp  video_decoder.cpp
src/output/: CMakeLists.txt  async_output_sink.cpp  av_exporter.cpp  exr_sequence_sink.cpp  ffmpeg_pipe_sink.cpp  ffmpeg_video_encoder.cpp  output_planner.cpp  output_utils.cpp  png_sequence_sink.cpp  prores_sink.cpp  shared_memory_sink.cpp
src/presets/: CMakeLists.txt  builders_common.cpp  common_scenes.cpp  preset_applier.cpp  preset_scene_resolver.cpp
src/render/: intent_builder.cpp
src/renderer2d/: CMakeLists.txt  README.md  draw_list_builder.cpp  draw_list_rasterizer.cpp  effect_host.cpp  evaluated_composition_renderer.cpp  framebuffer.cpp  layer_to_draw_command.cpp  path_rasterizer.cpp  precomp_cache.cpp  project_card.cpp  render_context.cpp  surface_pool.cpp  surface_rgba.cpp  texture_resolver.cpp  transition_registry_factory.cpp
src/renderer3d/: CMakeLists.txt  README.md  environment_manager.cpp  pbr_utils.cpp  ray_tracer.cpp  ray_tracer_scene.cpp  ray_tracer_shading.cpp
src/runtime/: CMakeLists.txt  README.md  batch_runner.cpp  frame_cache.cpp  frame_executor.cpp  quality_policy.cpp  render_graph.cpp  render_job.cpp  render_plan.cpp  render_session.cpp  runtime_facade.cpp  server.cpp  tile_scheduler.cpp
src/scene/: evaluator.cpp
src/server/: server.cpp
src/studio/: studio_library.cpp
src/text/: CMakeLists.txt  README.md  font.cpp  font_registry.cpp  layout.cpp  layout_engine.cpp  outline_extractor.cpp  subtitle.cpp  text_animator_utils.cpp  text_measure.cpp  text_raster_surface.cpp
src/timeline/: CMakeLists.txt  camera_cuts.cpp  camera_evaluator.cpp  frame_blend.cpp  frame_evaluator.cpp  layer_evaluator.cpp  time.cpp  time_remap.cpp  time_resolver.cpp
src/tools/: tachyon_asset_pack_main.cpp
src/tracker/: README.md  camera_solver.cpp  camera_solver_keyframes.cpp  camera_solver_math.cpp  feature_tracker.cpp  optical_flow.cpp  optical_flow_translation.cpp  planar_track.cpp  planar_track_binding.cpp  planar_tracker.cpp  point_tracker.cpp  rolling_shutter.cpp  stabilizer.cpp  track.cpp  track_binding.cpp
tests/: CMakeLists.txt  scene_spec_tests.cpp  test_main.cpp  test_motion_blur.cpp  test_particle_system.cpp  test_simple.cpp  test_text_stagger.cpp
tests/cmake/: ArchitectureTests.cmake  BackendTests.cmake  CliTests.cmake  ContentTests.cmake  CoreTests.cmake  DeterminismTests.cmake  GoldenTests.cmake  OperationsTests.cmake  OutputTests.cmake  RenderTests.cmake  RuntimeTests.cmake  SceneTests.cmake  SmokeTests.cmake  ToolTests.cmake
tests/compile/: header_smoke_composition_spec.cpp  header_smoke_layer_spec.cpp  header_smoke_render_job_spec.cpp  header_smoke_scene_builder.cpp  header_smoke_scene_spec.cpp
tests/disabled/: README.md  (+4 more)
(+2493 files in other folders)
